# jinja.cpp

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  jinja.hpp
doc/: implementation_details.md  implementation_details_CN.md
include/: jinja.hpp
src/: jinja.cpp
tests/: generate_assets.py  test_chat_template.json  test_main.cpp
